# coreutils

./: Cargo.toml  GNUmakefile  deny.toml
.cargo/: config.toml
.github/workflows/: CICD.yml  android.yml
src/uu/cp/src/: cp.rs
src/uu/cp/src/platform/: linux.rs  mod.rs
src/uu/dd/: Cargo.toml
src/uu/dd/src/: dd.rs
src/uu/df/src/: table.rs
src/uu/env/: Cargo.toml
src/uu/env/src/: env.rs  native_int_str.rs  parse_error.rs  raw_string_parser.rs  split_iterator.rs  string_expander.rs  string_parser.rs  utf8_chunk.rs  variable_parser.rs
src/uu/head/src/: head.rs
src/uu/ls/src/: ls.rs
src/uu/od/src/: inputdecoder.rs  multifilereader.rs  od.rs  output_info.rs  partialreader.rs  peekreader.rs
src/uu/split/src/: split.rs
src/uu/stty/: Cargo.toml
src/uu/stty/src/: main.rs  stty.rs
src/uu/tail/src/: paths.rs  tail.rs
src/uu/timeout/src/: timeout.rs
src/uu/tty/: Cargo.toml
src/uu/tty/src/: tty.rs
src/uucore/: Cargo.toml
tests/: test_util_name.rs  tests.rs
tests/benches/factor/: Cargo.toml
tests/benches/factor/benches/: table.rs
tests/by-util/: test_dd.rs  test_df.rs  test_du.rs  test_env.rs  test_head.rs  test_install.rs  test_ls.rs  test_nohup.rs  test_od.rs  test_split.rs  test_stty.rs  test_timeout.rs  test_tty.rs
tests/common/: mod.rs  util.rs
tests/common/unix/: mod.rs
tests/common/windows/: conpty.rs  mod.rs  process.rs
tests/fixtures/timeout/: reference_kill_subprocess.txt
util/: android-commands.sh  build-gnu.sh
util/android-scripts/: collect-info.sh  run-tests.sh
util/gnu-patches/: tests_env_env-S.pl.patch
(+8 files in other folders)
