[package]
name = "uu_factor_benches"
version = "0.0.0"
authors = ["nicoo <nicoo@debian.org>"]
license = "MIT"
description = "Benchmarks for the uu_factor integer factorization tool"
homepage = "https://github.com/uutils/coreutils"
edition = "2021"

[workspace]

[dependencies]
uu_factor = { path = "../../../src/uu/factor" }

[dev-dependencies]
array-init = "2.0.0"
criterion = "0.3"
rand = "0.8"
rand_chacha = "0.3.1"
num-bigint = "0.4.4"
num-prime = "0.4.3"
num-traits = "0.2.18"
prime_factorization = "1.0.4"
prime-factor = "0.4.6"
primeshor = "0.2.0"
factor-rs = "1.2.1"
slow_primes = "0.1.14"
primal = "0.3.2"

[[bench]]
name = "table"
harness = false
